# Voxel-Engine

./: .gitignore  CMakeLists.txt  Config.h  Cube.cpp  LICENSE  Mesh.h  README.md  Renderer.cpp  Renderer.h  SDL3PRJ.desktop  Triangle.h  Window.h  appicon.xcf  main.cpp  vcpkg.json  version.rc
Engine/: Cube.h  Game.cpp  Game.h  Mesh.cpp  Mesh.h  Renderer.h  Shader.h  Window.cpp  Window.h
Engine/Camera/: Camera.cpp  Camera.h
Engine/Rendering/: Cube.cpp  Cube.h  Mesh.hpp  Model.hpp
Entities/: Entity.h
cmake/: deps.cmake
glsl resources/shaders/: terrainShader.frag
resources/shaders/: shader.vert  terrainShader.frag  terrainShader.vert
resources/textures/: texture_atlas.xcf
resources/textures/skyboxes/: back.xcf  bottom.xcf  front.xcf  left.xcf  right.xcf  top.xcf
src/: config.h  main.cpp  main_win32.cpp
src/Engine/: Game.cpp  Game.h  Triangle.cpp  Window.h
src/Engine/Rendering/: Cube.h  Mesh.hpp  Model.hpp
src/Entities/: Entity.cpp  Player.cpp  Player.h
src/engine/: game.cpp  game.h  triangle.cpp  window.cpp
src/engine/camera/: camera.cpp  camera.h
src/engine/client/: playerRaycaster.h
src/engine/demo/: triangle.cpp  triangle.h
src/engine/math/: mod.h
src/engine/physics/: AABB.cpp  AABB.h  PhysicsSystem.cpp  PhysicsSystem.h  worldCollision.cpp  worldCollision.h
src/engine/physics/collisions/: AABB.cpp  worldCollision.cpp  worldCollision.h
src/engine/raycasting/: raycast.cpp  raycast.h
src/engine/rendering/: cube.cpp  cube.h  mesh.hpp  model.hpp  shader.h
src/engine/rendering/backends/: vulkanBackend.cpp  vulkanBackend.h
src/engine/rendering/terrain/: BlockTextureAtlas.cpp  BlockTextureAtlas.h  ChunkMesh.cpp  ChunkMesh.h  GreedyMesher.cpp  GreedyMesher.h
src/engine/skybox/: skybox.h
src/engine/terrain/: chunk.h  voxel.h  world.cpp  world.h
src/entities/: entity.cpp  entity.h  player.cpp  player.h
